--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@typescript-eslint/eslint-plugin": "^2.32.0",
+    "@typescript-eslint/parser": "^2.32.0",
     "bootstrap": "^4.4.1",
+    "csv-parse": "^4.9.0",
+    "eslint-plugin-react-hooks": "^4.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "standardx": "^5.0.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
