--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
+    "@types/react-datepicker": "^2.11.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-paginate": "^6.2.1",
     "@types/uuid": "^7.0.3",
     "@typescript-eslint/eslint-plugin": "^2.32.0",
     "@typescript-eslint/parser": "^2.32.0",
@@ -18,7 +20,9 @@
     "eslint-plugin-react-hooks": "^4.0.0",
     "moment": "^2.25.3",
     "react": "^16.13.1",
+    "react-datepicker": "^2.16.0",
     "react-dom": "^16.13.1",
+    "react-paginate": "^6.3.2",
     "react-scripts": "3.4.1",
     "standardx": "^5.0.0",
     "typescript": "~3.7.2",
